k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "goserver"
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
      - name: goserver
        image: "cassiustcmendes/hello-python:v6"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 2
          failureThreshold: 12
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 2
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 2
          failureThreshold: 1
          timeoutSeconds: 1
          successThreshold: 1
        volumeMounts:
          - mountPath: "/app/myfamily"
            name: config
          - mountPath: "/app/pvc"
            name: goserver-volume
      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
